--- a/data.tex
+++ b/data.tex
@@ -195,9 +195,9 @@
 % !!Lihat singkatan pembimbing dan penguji anda di file dosen.tex!!
 % Petunjuk: hilangkan tanda << & >>, dan isi sesuai dengan data anda
 %=============================================================================
-\namanpm{<<Nama Lengkap>>}{<<10 digit NPM UNPAR>>}
+\namanpm{Prayogo Cendra}{2014730033}
 \tanggal{<<tanggal>>}{<<bulan>>}{<<tahun>>}
-\pembimbing{<<pembimbing utama/1>>}{<<pembimbing pendamping/2>>}    
+\pembimbing{\CLF}{<<pembimbing pendamping/2>>}    
 \penguji{<<penguji 1>>}{<<penguji 2>>} 
 %=============================================================================
 
@@ -285,4 +285,8 @@
 %=============================================================================
 \renewcommand{\vtemplateauthor}{lionov}
 \pgfplotsset{compat=newest}
+\usepackage{mathtools, amsmath, amssymb, tikz}
+\newcommand\encircle[1]{%
+  \tikz[baseline=(X.base)] 
+    \node (X) [draw, shape=circle, inner sep=0] {\strut #1};}
 %=============================================================================
