--- a/dosen.tex
+++ b/dosen.tex
@@ -77,5 +77,5 @@
 % * \newcommand{\HUH}{Husnul\,Hakim,\,M.T.} 
 % * \newcommand{\VAN}{Vania\,Natali,\,M.T.} 
 % * \newcommand{\ABS}{Aditya\,Bagoes\,Saputra,\,M.T.} 
-% * \newcommand{\CLF}{Claudio\,Franciscus,\,M.T.} 
+\newcommand{\CLF}{Claudio\,Franciscus,\,M.T.} 
 % * \newcommand{\NAT}{Natalia,\,M.Si.} 
