--- a/Bab/bab2.tex
+++ b/Bab/bab2.tex
@@ -2,20 +2,484 @@
 \chapter{Landasan Teori}
 \label{chap:teori}
 
-\section{Skripsi}
-\label{sec:skripsi} 
- 
-Rencananya akan diisi dengan penjelasan umum mengenai buku skripsi.
+\section{Linear Programming}
+\label{linear_programming}
 
-\dtext{11-12} 
+Linear programming adalah teknik dalam ilmu matematika untuk menyelesaikan masalah yang berhubungan dengan optimasi. Teknik ini biasa digunakan dalam bidang produksi, manajemen operasional, penjadwalan, dan bidang-bidang lainnya yang melibatkan pengambilan keputusan. Pada bidang produksi, terdapat masalah ketika menentukan produk yang akan dihasilkan. Biasanya terdapat beberapa faktor yang menjadi pertimbangan seperti jumlah ketersedian sumber daya, jumlah pekerja, dan besar keuntungan yang didapatkan. Dengan adanya faktor-faktor tersebut, penentuan terhadap produk yang akan dihasilkan tentunya harus dilakukan dengan perhitungan yang tepat. Linear programming merupakan teknik yang cocok untuk menyelesaikan masalah tersebut. Dengan memodelkan masalah tersebut secara tepat, maka masalah tersebut dapat diselesaikan sehingga menghasilkan solusi terbaik tanpa mengabaikan setiap faktor yang ada.
 
-\section{\LaTeX}
-\label{sec:latex}
+\subsection{Karakteristik}
+\label{karakteristik}
 
-Mengapa menggunakan \LaTeX{} untuk buku skripsi dan apa keunggulan/kerugiannya bagi mahasiswa dan pembuat template. 
+Setiap masalah optimasi dapat dimodelkan ke bentuk linear programming yang memiliki ciri-ciri sebagai berikut:
 
-\dtext{13-14}
+\begin{itemize}
+	\item Variabel keputusan
+	
+		Variabel keputusan merupakan variabel yang akan dicari nilainya. Variabel ini juga menunjukkan keputusan yang akan diambil.
+		
+		\begin{equation*}
+			\begin{split}
+				x_1 &= \text{jumlah produk A yang diproduksi} \\
+    			x_2 &= \text{jumlah produk B yang diproduksi}
+			\end{split}
+		\end{equation*}
+		
+	\item Fungsi Objektif
+	
+		Dalam masalah linear programming, terdapat tujuan yang ingin dimaksimalkan atau diminimalkan. Tujuan atau hasil ini ditentukan oleh variabel-variabel keputusan. Dalam kasus produksi, pembuat keputusan menginginkan jumlah pendapatkan terbesar. Bila pendapatan dihitung berdasarkan jumlah dan harga dari setiap produk, maka fungsi objektif akan memaksimalkan setiap pendapatan dari masing-masing produk.
+		
+		\begin{equation*}
+			\text{maximize } z = 3x_1 + 2x_2
+		\end{equation*}
 
+	\item Batasan
+	
+		Fungsi objektif ditentukan oleh variabel-variabel keputusan. Dalam fungsi objektif yang memaksimalkan hasil, nilai dari setiap variabel keputusan dapat ditentukan sedemikian mungkin sehingga menghasilkan hasil sebesar-besarnya. Tentunya hal ini tidak mungkin terjadi karena terdapat faktor-faktor yang mencegah variabel keputusan untuk ditentukan sedemikian mungkin. Faktor-faktor ini berperan sebagai batasan bagi variabel keputusan sehingga nilai variabel keputusan tidak melebihi batas. Dengan adanya batasan ini, nilai dari fungsi objektif tidak akan bernilai tak hingga karena variabel-variabel keputusannya dibatasi.
+		
+		\begin{equation*}
+			\begin{split}
+				2x_1 + x_2 &\leq 100 \\
+    			x_1 + x_2 &\leq 80 \\
+    			x_1 &\leq 40
+			\end{split}
+		\end{equation*}
+		
+	\item Tanda Pembatas
+		
+		Jika variabel keputusan \(x_i\) tidak dapat bernilai negatif maka perlu ditambahkan tanda pembatas \(x_i \geq 0\). Namun, apabila nilai variabel keputusan tidak dibatasi atau dapat bernilai negatif, maka variabel keputusan tersebut merupakan variabel yang tidak dibatasi oleh tanda (\textit{unrestricted in sign}). Dalam kasus produksi, jumlah barang yang diproduksi tidak dapat bernilai negatif sehingga variabel jumlah barang harus diberikan tanda pembatas.
+		
+		\begin{equation*}
+			\begin{split}
+    			x_1 &\geq 0 \\
+    			x_2 &\geq 0
+			\end{split}
+		\end{equation*}
+		
+\end{itemize}
+
+Dengan adanya keempat karakteristik di atas, setiap masalah optimasi dapat dimodelkan ke bentuk linear programming. Berikut contoh pemodelan masalah dalam bentuk linear progamming:
+
+\begin{equation*}
+	\setlength\arraycolsep{1.5pt}
+	\begin{array}{r r c r c l}
+		\text{maximize} &\multicolumn{5}{l}{z = 3x_1 + 2x_2}\\
+		\text{subject to} &2x_1 &+ &x_2 &\leq &100\\
+		&x_1 &+ &x_2 &\leq &80\\
+		&x_1 &&&\leq &40\\
+		&x_1 &&&\geq &0\\
+		&&&x_2 &\geq &0\\
+	\end{array}
+\end{equation*}
+
+\subsection{Daerah Solusi dan Solusi Optimal}
+\label{daerah_solusi_dan_solusi_optimal}
+
+Solusi dari linear programming merupakan solusi yang tidak melanggar setiap batasan-batasannya. Dengan diketahuinya hal ini, bisa saja maka linear programming memiliki banyak solusi dengan tidak melanggar batasan manapun. Dalam linear programming, solusi-solusi ini berada dalam daerah yang disebut dengan daerah solusi (feasible reqion). Daerah ini berbentuk \textit{covex polytope} yang terdiri dari banyak titik sudut. Titik-titik sudut ini merupakan perpotongan dari setiap batasan dengan batasan-batasan lainnya. Dengan adanya daerah ini, pencarian solusi menjadi dibatasi sehingga tidak perlu memeriksa seluruh kemungkinan yang ada. 
+
+Bila diketahui bahwa titik sudut dibentuk dari perpotongan antar batasan, maka hal ini tidak berlaku sebaliknya. Titik potong tidak selalu menjadi titik sudut bagi daerah solusi. Titik sudut merupakan titik potong yang tidak melanggar batasan-batasan. Apabila daerah solusi divisualisasikan dalam bentuk grafik atau lainnya, daerah solusi akan berbentuk \textit{convex polytope}.
+
+Bila daerah solusi sudah ditemukan, solusi optimal dapat dicari dengan memeriksa setiap kemungkinan yang berada di dalam daerah solusi. Walaupun demikian, pemeriksaan ini masih dianggap tidak efisien. Bila solusi optimal dapat berupa bilangan pecahan, maka pemeriksaan tidak dapat berakhir karena bilangan pecahan yang berada di antara dua batas berjumlah tak hingga.
+
+Tentunya seluruh pemeriksaan ini dapat dihindari karena solusi optimal dari linear programming berada pada salah satu titik sudut di daerah solusi. Dengan diketahuinya hal ini, maka solusi optimal dapat dicari dengan mengecek setiap titik sudut yang berjumlah terhitung (\textit{finite}).
+
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		\draw[gray!50, thin, step=1] (0,0) grid (5,5);
+		\draw[very thick,->] (0,0) -- (5.2, 0) node[right] {$x$};
+		\draw[very thick,->] (0,0) -- (0, 5.2) node[above] {$y$};
+		\foreach \x in {0,...,5} \draw (\x,0.05) -- (\x,-0.05) node[below] {\small\x};
+		\foreach \y in {1,...,5} \draw (-0.05,\y) -- (0.05,\y) node[left] {\small\y};
+		\draw (0,4) -- (5, 1.5);
+		\draw (4,0) -- (4,5);
+		\draw (0,5) -- (5,0);
+		\filldraw [black] (0,0) circle (2pt);
+		\filldraw [black] (0,4) circle (2pt);
+		\filldraw [black] (2,3) circle (2pt);
+		\filldraw [black] (4,1) circle (2pt);
+		\filldraw [black] (4,0) circle (2pt);
+		\draw (0,0) node[left] {$A$};
+		\draw (0,4.1) node[above,right] {$B$};
+		\draw (2.1,3) node[above] {$C$};
+		\draw (4,1.1) node[right] {$D$};
+		\draw (4,0.2) node[right] {$E$};
+		\fill[blue!50!cyan,opacity=0.3] (0,0) -- (0,4) -- (2,3) -- (4,1) -- (4,0) -- cycle;
+	\end{tikzpicture}
+	\caption{Titik-titik sudut dalam daerah solusi}
+\end{figure}
+
+Dengan diketahuinya daerah solusi, maka terdapat 3 jenis solusi optimal dalam linear programming, yaitu:
+
+\begin{enumerate}
+	\item Daerah solusi yang dibatasi (\textit{bounded feasible region})
+	
+		Batasan-batasan menghasilkan daerah solusi yang berbentuk \textit{convex polytope}. Solusi optimal linear programming terdapat di salah satu titik sudut.
+			
+		\begin{figure}[H]
+    		\centering
+			\begin{tikzpicture}
+		    	\draw[gray!50, thin, step=1] (0,0) grid (5,5);
+				\draw[very thick,->] (0,0) -- (5.2, 0) node[right] {$x$};
+				\draw[very thick,->] (0,0) -- (0, 5.2) node[above] {$y$};
+				\foreach \x in {0,...,5} \draw (\x,0.05) -- (\x,-0.05) node[below] {\small\x};
+				\foreach \y in {1,...,5} \draw (-0.05,\y) -- (0.05,\y) node[left] {\small\y};
+				\draw (0,4) -- node[above,near end,sloped] {\small $x + 2y \leq 8$} (5, 1.5);
+				\draw (4,0) -- node[right,near end] {\small $x \leq 4$} (4,5);
+				\draw (0,5) -- node[above,near start,sloped] {\small $x + y \leq 5$} (5,0);
+				\fill[blue!50!cyan,opacity=0.3] (0,0) -- (0,4) -- (2,3) -- (4,1) -- (4,0) -- cycle;
+			\end{tikzpicture}
+			\caption{Daerah solusi yang dibatasi}
+		\end{figure}
+    	
+	\item Daerah solusi yang tidak dibatasi (\textit{unbounded feasible region})
+	
+		Batasan-batasan menghasilkan daerah solusi, namun daerah tersebut memiliki bagian yang tidak tertutup sehingga tidak berbentuk \textit{convex polytope}. Hal ini dapat menyebabkan jumlah solusi yang tak terhitung. Dalam kasus ini, linear programming memiliki solusi namun solusi optimal tidak dapat ditemukan.
+			
+    	\begin{figure}[H]
+    		\centering
+			\begin{tikzpicture}
+				\draw[gray!50, thin, step=1] (0,0) grid (5,5);
+				\draw[very thick,->] (0,0) -- (5.2, 0) node[right] {$x$};
+				\draw[very thick,->] (0,0) -- (0, 5.2) node[above] {$y$};
+				\foreach \x in {0,...,5} \draw (\x,0.05) -- (\x,-0.05) node[below] {\small\x};
+				\foreach \y in {1,...,5} \draw (-0.05,\y) -- (0.05,\y) node[left] {\small\y};
+				\draw (2,0) -- node[below,sloped] {\small $-2x + 3y \geq -4$} (5,2);
+				\draw (0,1) -- node[above,near end,sloped] {\small $4x - y \geq -1$} (1,5);
+				\fill[blue!50!cyan,opacity=0.3] (0,0) -- (0,1) -- (1,5) -- (5,5) -- (5,2) -- (2,0) -- cycle;
+			\end{tikzpicture}
+			\caption{Daerah solusi yang tidak dibatasi}
+		\end{figure}
+
+	\item Tidak memiliki daerah solusi (\textit{infeasible region})
+
+		Batasan-batasan tidak membentuk daerah solusi akibat adanya dua atau lebih persamaan batasan yang saling bertentangan. Pada kasus ini, linear programming tidak memiliki solusi dan tidak dapat diselesaikan.
+			
+		\begin{figure}[H]
+    		\centering
+			\begin{tikzpicture}
+				\draw[gray!50, thin, step=1] (0,0) grid (5,5);
+				\draw[very thick,->] (0,0) -- (5.2, 0) node[right] {$x$};
+				\draw[very thick,->] (0,0) -- (0, 5.2) node[above] {$y$};
+				\foreach \x in {0,...,5} \draw (\x,0.05) -- (\x,-0.05) node[below] {\small\x};
+				\foreach \y in {1,...,5} \draw (-0.05,\y) -- (0.05,\y) node[left] {\small\y};
+				\draw (3,0) -- node[above,sloped] {\small $x + y \leq 3$} (0,3);
+				\draw (5,0) -- node[above,sloped] {\small $x + y \geq 5$} (0,5);
+			\end{tikzpicture}
+			\caption{Tidak memiliki daerah solusi}
+    	\end{figure}
+
+\end{enumerate}
+
+\subsection{Bentuk Standar}
+\label{bentuk_standar}
+
+Setiap model linear programming dapat dimodelkan ke dalam bentuk standar berikut ini:
+    	
+\begin{center}
+	\begin{tabular}{r c @{}c @{}c @{}c @{}c @{}c @{}c c l}
+	    \textit{maximize}	& $c_1x_1$    & + & $c_2x_2$    & + & \dots & + & $c_nx_n$ \\
+		\textit{subject to} & $a_{11}x_1$ & + & $a_{12}x_2$ & + & \dots & + & $a_{1n}x_n$ & = & $b_1$ \\
+    						& $a_{21}x_1$ & + & $a_{22}x_2$ & + & \dots & + & $a_{2n}x_n$ & = & $b_2$ \\
+                            & \multicolumn{7}{c}{\vdots}                                  &   & \vdots \\
+                            & $a_{m1}x_1$ & + & $a_{m2}x_2$ & + & \dots & + & $a_{mn}x_n$ & = & $b_m$ \\
+                            & \multicolumn{9}{l}{$x_1\geq0,x_2\geq0,\dots,x_n\geq0$}
+	\end{tabular}
+\end{center}
+
+Bentuk tersebut merupakan bentuk standar linear programming yang terdiri dari $n$ buah variabel $x$ dan $m$ buah persamaan batasan. Variabel $b_i,c_i,a_{ij}$ merupakan konstanta dan $x_i$ merupakan variabel keputusan. Bentuk standar tersebut dapat dibentuk dalam notasi matriks berikut:
+        
+\begin{center}
+	\begin{tabular}{r l}
+    	\textit{maximize}   & $c^Tx$ \\
+        \textit{subject to} & $Ax=b$ and $x\geq0$
+	\end{tabular}    
+\end{center}
+        
+Pada notasi matriks, $x$ adalah matriks kolom berdimensi $n$, $C^T$ adalah matriks baris berdimensi $n$, $A$ adalah matriks berdimensi $m\times n$, dan $b$ adalah matriks kolom berdimensi $m$. Matriks $x\geq0$ menunjukkan bahwa setiap variabel keputusan $x_i$ tidak dapat bernilai negatif.
+        
+Langkah-langkah untuk mengubah \textit{linear program} ke bentuk standar:
+
+\begin{enumerate}
+	\item Ubah objektif menjadi maksimalisasi
+	
+		Apabila objektif berupa minimalisasi, maka ubah objektif menjadi maksimalisasi dengan cara mengalikan fungsi objektif dengan -1. Contoh:
+	
+		\begin{equation*}
+			\text{minimize } z = x_1 + 2x_2
+		\end{equation*}
+		
+		menjadi
+		
+		\begin{equation*}
+			\text{maximize } -z = -x_1 - 2x_2
+		\end{equation*}
+		
+%	\item Ubah sisi kanan pertidaksamaan batasan sehingga tidak bernilai negatif
+	
+%		Apabila konstanta di sisi kanan pada pertidaksamaan batasan berupa bilangan negatif, maka kalikan kedua ruas pertidaksamaan dengan -1 sehingga sisi kanan tidak bernilai negatif. Contoh:
+		
+%		\begin{equation*}
+%			x_1 + 2x_2 \leq -20
+%		\end{equation*}
+		
+%		menjadi
+		
+%		\begin{equation*}
+%			-x_1 - 2x_2 \geq 20
+%		\end{equation*}
+
+	\item Ubah pertidaksamaan pada batasan ke dalam bentuk persamaan
+	
+		Perubahan pertidaksamaan pada batasan dibedakan menjadi 2 berdasarkan jenis tandanya, yaitu:
+		
+		\begin{enumerate}
+			\item Pertidaksamaan lebih kecil (\(\leq\))		
+
+				Pertidaksamaan dengan tanda lebih kecil diubah ke bentuk persamaan dengan cara menambahkan variabel baru bernilai positif yang dinamakan \textit{slack}. Selain itu ditambahkan juga tanda pembatas bagi variabel \textit{slack} tersebut. Contoh:
+				
+				\begin{equation*}
+					x_1 + 2x_2 \leq 40
+				\end{equation*}
+				
+				menjadi
+				
+				\begin{equation*}
+					\begin{split}
+						x_1 + 2x_2 + s_1 &= 40\\
+						s_1 &\geq 0
+					\end{split}
+				\end{equation*}
+			
+			\item Pertidaksamaan lebih besar (\(\geq\))
+			
+				Pertidaksamaan dengan tanda lebih besar diubah ke bentuk persamaan dengan cara menambahkan variabel baru bernilai negatif yang dinamakan \textit{surplus}. Selain itu ditambahkan juga tanda pembatas bagi variabel \textit{surplus} tersebut. Contoh:
+				
+				\begin{equation*}
+					x_1 + 2x_2 \geq 40
+				\end{equation*}
+				
+				menjadi
+				
+				\begin{equation*}
+					\begin{split}
+						x_1 + 2x_2 - e_1 &= 40\\
+						e_1 &\geq 0
+					\end{split}
+				\end{equation*}
+		\end{enumerate}	
+\end{enumerate}
+
+\subsection{Variabel Basis dan Non Basis}
+\label{variabel_basis_dan_non_basis}
+
+Jika model linear programming \(Ax = b\) terdiri dari \(m\) buah persamaan batasan dan \(n\) buah variabel, maka solusi basis dapat ditemukan dengan cara membuat \(n - m\) buah variabel bernilai 0 dan menyelesaikan \(m\) buah variabel tersisa lainnya. Sebanyak \(n - m\) buah variabel yang dibuat bernilai 0 merupakan variabel non basis. Sedangkan sebanyak \(m\) buah variabel sisanya merupakan variabel basis karena diselesaikan dengan membuat variabel lainnya menjadi variabel non basis. Berikut contoh sistem persamaan linear:
+
+\begin{equation*}
+	\setlength\arraycolsep{1.5pt}
+	\begin{array}{r c r c r c l}
+		x_1 &+ &x_2 &  &    &= &3\\
+		    &  &x_2 &+ &x_3 &= &-1
+	\end{array}
+\end{equation*}
+
+Pada sistem persamaan linear di atas, akan dipilih sebanyak 3 - 2 = 1 (3 variabel dan 2 persamaan) buah variabel yang akan menjadi variabel non basis dalam. Jika himpunan variabel non basis NBV = \(\{x_3\}\), maka himpunan variabel basis BV = \(\{x_1, x_2\}\). Nilai dari variabel basis dapat dicari dengan membuat variabel \(x_3\) menjadi 0 dan menyelesaikan
+
+\begin{equation*}
+	\begin{split}
+		x_1 + x_2 &= 3\\
+		-x_2 &= -1
+	\end{split}
+\end{equation*}
+
+Didapatkan nilai \(x_1\) = 2 dan \(x_2\) = 1 sehingga \(x_1\) = 2, \(x_2\) = 1, \(x_3\) = 0 menjadi solusi basis. Solusi basis merupakan solusi yang didapatkan dengan menggunakan variabel basis.
+
+\subsection{Metode Simplex}
+\label{metode_simplex}
+
+Metode simplex merupakan salah satu metode yang digunakan untuk mencari solusi optimal dari masalah linear programming. Metode \textit{simplex} bekerja secara beriterasi dan akan menghasilkan solusi yang mendekati optimal pada setiap iterasinya. Iterasi ini akan dilakukan hingga tidak ditemukannya solusi yang lebih optimal. Berikut contoh masalah linear programming:
+
+\begin{center}
+	\begin{tabular}{r c @{}c @{}c c l}
+		\textit{maximize}   & $3x_1$ & + & $2x_2$ \\
+		\textit{subject to} & $2x_1$ & + & $x_2$  & $\leq$ & $18$ \\
+        					& $2x_1$ & + & $3x_2$ & $\leq$ & $42$ \\
+                           	& $3x_1$ & + & $x_2$  & $\leq$ & $24$ \\
+                           	& \multicolumn{5}{l}{$x_1\geq0,x_2\geq0$} \\
+	\end{tabular}
+\end{center}
+        
+Berikut langkah-langkah untuk menyelesaikan maslaah linear programming dengan menggunakan metode simplex:
+
+\begin{enumerate}
+	\item Mengubah ke dalam bentuk standar
+	
+        Pertidaksamaan-pertidaksamaan pada batasan diubah menjadi bentuk persamaan dengan menambahkan variabel \textit{slack} dan mengubah tanda pertidaksamaan menjadi tanda persamaan.
+        
+	    \begin{center}
+			\begin{tabular}{r c @{}c @{}c @{}c @{}c @{}c @{}c @{}c @{}c c l}
+    	    	\textit{maximize}   & $3x_1$ & + & $2x_2$ & + & $0x_3$ & + & $0x_4$ & + & 0$x_5$\\
+	            \textit{subject to} & $2x_1$ & + & $x_2$  & + & $x_3$ &   &       &   &       & $=$ & $18$ \\
+                        	   		& $2x_1$ & + & $3x_2$ &   &       & + & $x_4$ &   &       & $=$ & $42$ \\
+                    	       		& $3x_1$ & + & $x_2$  &   &       &   &       & + & $x_5$ & $=$ & $24$ \\
+                	           		& \multicolumn{11}{l}{$x_1\geq0,x_2\geq0,x_3\geq0,x_4\geq0,x_5\geq0$} \\
+        	\end{tabular}
+		\end{center}
+			
+	\item Membuat tabel \textit{simplex}\\
+		Tabel \textit{simplex} yang terdiri dari 4 kolom utama, yaitu kolom basis, kolom $z$, kolom variabel non basis, dan kolom ruas kanan/rhs (\textit{right hand side}). Pada awalnya, baris $z$ berisi nilai negatif dari konstanta variabel pada fungsi objektif dan $m$ baris berikutnya berisi konstanta variabel pada setiap persamaan batasan. $m$ baris terkahir ini diidentifikasikan sebagai baris basis. Berikut bentuk dari tabel simplex:
+        	
+		\begin{table}[H]
+			\centering
+			\begin{tabular}{|c|c|c c c c |c|}
+				\hline
+				basic & $z$ & $x_1$ & $x_2$ & \dots & $x_n$ & rhs \\
+				\hline
+				$z$ & 1 & $-c_1$ & $-c_2$ & \dots & $-c_n$ & 0 \\
+				\hline
+				$x_{n+1}$ & 0 & $a_{11}$ & $a_{12}$ & \dots & $a_{1n}$ & $b_1$ \\
+				$x_{n+2}$ & 0 & $a_{21}$ & $a_{22}$ & \dots & $a_{2n}$ & $b_2$ \\
+				\vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
+				$x_{n+m}$ & 0 & $a_{m1}$ & $a_{m2}$ & \dots & $a_{mn}$ & $b_m$ \\
+				\hline
+			\end{tabular}
+			\caption{Kerangka awal tabel simplex}
+		\end{table}
+			
+		Berikut tabel simplex awal untuk contoh masalah linear programming di atas:
+			
+		\begin{table}[H]
+			\centering
+			\begin{tabular}{|c|c|c c c c c|c|}
+				\hline
+				basic & $z$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & rhs \\
+				\hline
+				$z$ & 1 & -3 & -2 & 0 & 0 & 0 & 0 \\
+				\hline
+				$x_3$ & 0 & 2 & 1 & 1 & 0 & 0 & 18\\
+				$x_4$ & 0 & 2 & 3 & 0 & 1 & 0 & 42\\
+				$x_5$ & 0 & 3 & 1 & 0 & 0 & 1 & 24\\
+				\hline
+			\end{tabular}
+			\caption{Tabel simplex pada iterasi ke-1}
+		\end{table}
+
+	\item Mengecek solusi optimal
+	
+    	Apabila pada baris $z$ tidak terdapat variabel dengan nilai negatif, maka solusi optimal sudah ditemukan dan menandakan akhir dari iterasi. Solusi optimal terdapat pada setiap rhs dari setiap baris basis. Jika masih terdapat variabel dengan nilai negatif, maka langkah selanjutnya adalah melakukan proses \textit{pivoting}.
+
+		Pada tabel contoh \textit{linear program} iterasi pertama, terdapat nilai negatif di baris $z$, yaitu pada variabel $x_1$ dan $x_2$. Maka, akan dilanjutkan dengan proses \textit{pivoting}.
+
+	\item Melakukan proses \textit{pivoting}
+		
+    	Proses \textit{pivoting} merupakan proses penukaran satu variabel basis dengan satu variabel non basis. Variabel basis yang akan digantikan (keluar dari baris basis) disebut dengan \textit{leaving variable} dan variabel non basis yang akan menggantikan (masuk ke baris basis) disebut \textit{entering variable}. Ketentuan dalam pemilihan variabel yang akan ditukar adalah sebagai berikut:
+
+		\begin{itemize}
+    		\item \textit{Entering variable} dipilih berdasarkan nilai terkecil dalam baris $z$. Kolom dari \textit{entering variable} akan menjadi kolom pivot (\textit{pivot column}).
+    		
+    		\item \textit{Leaving variable} dipilih berdasarkan rasio terkecil rhs bersangkutan per nilai pada kolom pivot bersangkutan. Baris dari \textit{leaving variable} akan menjadi baris pivot (\textit{pivot row}).
+
+			\item Pivot merupakan nilai yang berada di perpotongan kolom pivot dan baris pivot.
+    	\end{itemize}
+
+    	Berdasarkan contoh, $x_1$ menjadi \textit{entering variabel} karena bernilai paling kecil di baris $z$, yaitu $-3$. Sedangkan baris basis $x_5$ menjadi \textit{leaving variable} karena nilai rasionya yang paling kecil, yaitu 8. Perpotongan baris pivot dan kolom pivot menghasilkan pivot bernilai $3$.
+
+    	\begin{table}[H]
+    		\centering					
+			\begin{tabular}{c|c|c|c c c c c|c|c}
+				\multicolumn{3}{c}{} & \multicolumn{6}{l}{\textit{pivot column}}\\
+				\multicolumn{3}{c}{} & $\downarrow$ & \multicolumn{5}{c}{}\\
+				\cline{2-9}
+				& basic & $z$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & rhs & ratio: \\
+				\cline{2-9}
+				& $z$ & 1 & -3 & -2 & 0 & 0 & 0 & 0 & $\frac{rhs_i}{pivotCol_{i}}$ \\
+				\cline{2-9}
+				& $x_3$ & 0 & 2 & 1 & 1 & 0 & 0 & 18 & $\frac{18}{2}=9$\\
+				& $x_4$ & 0 & 2 & 3 & 0 & 1 & 0 & 42 & $\frac{42}{2}=21$\\
+				\textit{pivot row} $\rightarrow$ & $x_5$ & 0 & \encircle{3} & 1 & 0 & 0 & 1 & 24 & $\frac{24}{3}=8$\\
+				\cline{2-9}
+			\end{tabular}
+			\caption{Proses \textit{pivoting}}
+		\end{table}
+    		
+    \item Memperbaharui table simplex
+    
+		Setiap nilai pada baris basis baru akan dibagi dengan nilai pivot sebelumnya. Sedangkan nilai pada baris basis lainnya dikurangi dengan hasil perkalian antara nilai kolom pivot yang bersangkutan dengan nilai baru pada baris pivot yang bersangkutan. Setelah diperbaharui, langkah selanjutnya adalah kembali pada pengecekan solusi optimal.
+
+		Pada contoh linear programming, $x_1$ menjadi baris basis yang baru. Setiap nilai pada baris tersebut dibagi dengan nilai pivot sebelumnya yang bernilai $3$. Setiap nilai pada baris basis lainnya diubah sesuai dengan ketentuan yang sudah dibahas sebelumnya.
+			
+		\begin{table}[H]
+			\centering
+			\small
+			\begin{tabular}{|c|c|c @{\hspace{0.2cm}}c @{\hspace{0.2cm}}c @{\hspace{0.2cm}}c @{\hspace{0.2cm}}c|c|c}
+				\hline
+				basic & $z$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & rhs \\
+				\hline
+				$z$ & 1 & $-3-(-3\times\frac{3}{3})$ & $-2-(-3\times\frac{1}{3})$ & $0-(-3\times0)$ & $0-(-3\times0)$ & $0-(-3\times\frac{1}{3})$ & $0-(-3\times\frac{24}{3})$ \\
+				\hline
+				$x_3$ & 0 & $2-(2\times\frac{3}{3})$ & $1-(2\times\frac{1}{3})$ & $1-(2\times0)$ & $0-(2\times0)$ & $0-(2\times\frac{1}{3})$ & $18-(2\times\frac{24}{3})$ \\
+				$x_4$ & 0 & $2-(2\times\frac{3}{3})$ & $3-(2\times\frac{1}{3})$ & $0-(2\times0)$ & $1-(2\times0)$ & $0-(2\times\frac{1}{3})$ & $42-(2\times\frac{24}{3})$ \\
+				$x_1$ & 3 & $\frac{3}{3}$ & $\frac{1}{3}$ & 0 & 0 & $\frac{1}{3}$ & $\frac{24}{3}$ \\
+				\hline
+			\end{tabular}
+			\normalsize
+			\caption{Proses pembaharuan baris basic}
+		\end{table}
+			
+		Berikut tabel simplex pada akhir iterasi ke-2:
+			
+		\begin{table}[H]
+			\centering
+			\begin{tabular}{|c|c|c c c c c|c|c}
+				\hline
+				basic & $z$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & rhs \\
+				\hline
+				$z$ & 1 & 0 & -1 & 0 & 0 & 1 & 24 \\
+				\hline
+				$x_3$ & 0 & 0 & $\frac{1}{3}$ & 1 & 0 & $-\frac{2}{3}$ & 2 \\
+				$x_4$ & 0 & 0 & $\frac{7}{3}$ & 0 & 1 & $-\frac{2}{3}$ & 26 \\
+				$x_1$ & 3 & 1 & $\frac{1}{3}$ & 0 & 0 & $\frac{1}{3}$ & 8 \\
+				\hline
+			\end{tabular}
+			\caption{Tabel simplex iterasi ke-2}
+		\end{table}
+			
+		Pada iterasi ke-2 masih terdapat nilai negatif pada baris $z$, sehingga iterasi masih dilakukan hingga tidak terdapat nilai negatif pada baris $z$. Berikut tabel-tabel simplex pada iterasi yang masih tersisa:
+			
+		\begin{table}[H]
+			\centering
+			\begin{tabular}{|c|c|c c c c c|c|c}
+				\hline
+			 	basic & $z$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & rhs \\
+				\hline
+				$z$ & 1 & 0 & 0 & 3 & 0 & -1 & 30 \\
+				\hline
+				$x_2$ & 2 & 0 & 1 & 3 & 0 & -2 & 6 \\
+				$x_4$ & 0 & 0 & 0 & -7 & 1 & 4 & 12 \\
+				$x_1$ & 3 & 1 & 0 & -1 & 0 & 1 & 6 \\
+				\hline
+			\end{tabular}
+			\caption{Tabel simplex iterasi ke-3}
+		\end{table}
+
+		\begin{table}[H]
+			\centering
+			\begin{tabular}{|c|c|c c c c c|c|c}
+				\hline
+			 	basic & $z$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ & $x_5$ & rhs \\
+				\hline
+				$z$ & 1 & 0 & 0 & $\frac{5}{4}$ & $\frac{1}{4}$ & 0 & 33 \\
+				\hline
+				$x_2$ & 2 & 0 & 1 & $-\frac{1}{2}$ & $\frac{1}{2}$ & 0 & 12 \\
+				$x_5$ & 0 & 0 & 0 & $-\frac{7}{4}$& $\frac{1}{4}$ & 1 & 3 \\
+				$x_1$ & 3 & 1 & 0 & $\frac{3}{4}$ & $-\frac{1}{4}$ & 0 & 3 \\
+				\hline
+			\end{tabular}
+			\caption{Tabel simplex iterasi ke-4}
+		\end{table}
+
+		Pada iterasi ke-4 sudah tidak terdapat nilai negatif pada baris $z$. Dengan demikian, solusi optimal sudah dicapai, yaitu pada titik $x_1 = 3$ dan $x_2=12$.
+
+\end{enumerate}
 
 \section{Template Skripsi FTIS UNPAR}
 \label{sec:template}
